@@ -1,0 +1,93 @@
+import React, { useEffect } from 'react';
+import { useDispatch, useSelector } from 'react-redux';
+import { Link } from 'react-router-dom';
+import { addToCart, removeFromCart } from '../redux/actions/cartActions';
+
+export const CartPage = (props) => {
+
+    const cart = useSelector(state => state.cart)
+    const { cartItems } = cart;
+
+    const productId = props.match.params.id;
+    const qty = props.location.search ? Number(props.location.search.split("=")[1]) : 1;
+    const dispatch = useDispatch()
+    useEffect(() => {
+        if (productId) {
+          dispatch(addToCart(productId, qty));
+        }
+    }, [dispatch, productId, qty ]);
+
+    const removeFromCartHandler = (productId) => {
+        dispatch(removeFromCart(productId));
+    }
+
+    const checkoutHandler = () => {
+        props.history.push("/signin?redirect=shipping");
+    }
+
+    const count = () => { return cartItems.reduce((a, c) =>   a + c.qty, 0)}
+    const amount = () => { return cartItems.reduce((a, c) =>  a + c.price * c.qty, 0)}
+    
+    return <div className="cart">
+    <div className="cart-list">
+      <ul className="cart-list-container">
+        <li>
+          <h3>
+            Shopping Cart
+          </h3>
+          <div>
+            Price
+          </div>
+        </li>
+        {
+          cartItems.length === 0 ?
+            <div>
+              Cart is empty
+          </div>
+            :
+            cartItems.map(item =>
+              <li key={item.product}>
+                <div className="cart-image">
+                  <img src={item.image} alt="product" />
+                </div>
+                <div className="cart-name">
+                  <div>
+                    <Link to={`/product/${item.product}`}>
+                      {item.name}
+                    </Link>
+                  </div>
+                  <div>
+                    Qty:
+                    <select value={item.qty} onChange={(e) => dispatch(addToCart(item.product, e.target.value))}>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                    </select>
+                    <button type="button" className="button" onClick={() => removeFromCartHandler(item.product)} >
+                      Delete
+                    </button>
+                  </div>
+                </div>
+                <div className="cart-price">
+                  ${item.price}
+                </div>
+              </li>
+            )
+        }
+      </ul>
+
+    </div>
+    <div className="cart-action">
+      <h3>
+        Subtotal ( {count()} items)
+        :
+         $ {amount()}
+      </h3>
+      <button onClick={checkoutHandler} className="button primary full-width" disabled={cartItems.length === 0}>
+        Proceed to Checkout
+      </button>
+    </div>
+
+  </div>
+}
