@@ -1,7 +1,9 @@
 import { combineReducers } from "redux";
 import { productListReducer, productDetailsReducer} from "./productReducers";
+import { cartReducer } from "./cartReducers";
 
 export const rootReducer = combineReducers({
     productList: productListReducer,
-    productDetails: productDetailsReducer
+    productDetails: productDetailsReducer,
+    cart: cartReducer
 })
