@@ -1,9 +1,11 @@
 import { createStore, applyMiddleware, compose } from 'redux';
 import thunk from 'redux-thunk';
 import { rootReducer } from './redux/rootReducer';
+import Cookie from 'js-cookie';
 
+const cartItems = Cookie.getJSON("cartItems") || [];
 
-const initialState = {};
+const initialState = { cart: { cartItems } };
 const composeEnhancer = window.__REDUX_DEVTOOLS_EXTENSION_COMPOSE__ || compose;
 const store = createStore(rootReducer, initialState, composeEnhancer(applyMiddleware(thunk)));
 export default store;
